o-k8s/dp-rabbitmq.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq-deployment
  template:
    metadata:
      labels:
        app: rabbitmq-deployment
    spec:
      containers:
        - name: rabbitmq-deployment
          image: rabbitmq
          ports:
            - containerPort: 5672

---
apiVersion: v1
kind: Service
metadata:
  name: db-rabbitmq
spec:
  # type: NodePort
  ports:
    - port: 5672
      targetPort: 5672
  selector:
    type: rabbitmq-deployment
