o-k8s/dp-redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-redis-deployment
  labels:
    app: app
spec:
  selector:
    matchLabels:
      type: redis-pod
      app: app
  replicas: 1
  template:
    metadata:
      name: app-redis-pod
      labels:
        type: redis-pod
        app: app
    spec:
      containers:
        - name: x-redis
          image: redis:latest
          ports:
            - containerPort: 6379
          command: ["redis-server", "--requirepass" "1q2w3e4r", "--bind", "0.0.0.0", "--port", "6379"]

---
apiVersion: v1
kind: Service
metadata:
  name: app-redis
  labels:
    type: app-redis-service
    app: app
spec:
  ports:
    - port: 6379
      targetPort: 6379
  selector:
    type: redis-pod
    app: app
