o-k8s/dp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dp-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
        - path: /api
          pathType: Prefix
          backend:
            service:
              name: dp-api
              port:
                number: 8081
        - path: /client
          pathType: Prefix
          backend:
            service:
              name: dp-api
              port:
                number: 8081
